Major changes between version 0.16 and 0.98.
--------------------------------------------
  - A down or block breaks out of a cycle of repeated connect
    script failures.
  - A down request now aborts an in progress dial/connect script.
  - Call duration is now measured from the moment we try and start
    the link rather than when the link actually becomes up for
    network traffic. This makes more sense because chargable
    duration is from the moment the physical layer (modem etc.)
    is connected and not from when the network layer is connected.
  - Add beginnings of per-connection access flags to control
    who can do what.
  - Clean up of ctrl pipe handling for script output.
  - When the connect script times out we should go to STOP_DIAL.
  - Capture stderr output from scripts and feed it to syslog/monitors.
  - Allow config options to be set via a ctrl pipe (if allowed by
    the access flags for that pipe)
  - Added a protocol version to monitors. Default is original diald
    information so old monitors (e.g. diald-top) still work. New
    monitors can ask (e.g. our dctrl) can ask for the new stuff.
  - Added a title config option that is passed to monitors for
    identification purposes.
  - If no title is specified on the command line to dctrl we use a
    string representing the connection to the diald being monitored
    until (and unless) it gives us a title via the monitor connection.
  - Capture dialler stderr and send to monitors.
  - New dev device open loop that allows for use of lock.
  - Documentation update.
  - Syslog output is offered to monitors as well as syslog.
  - Ctrl pipes are assigned names for identification in log messages.
  - Do not tell openlog to put syslog output on stderr as well.
  - Only become a daemon after reading the initial config.
  - If we are dialling on a device and we get a request up on that
    device ignore the request. Either the dialler recognises what is