@@ -24,3 +24,5 @@
 #define ACCESS_MONITOR	0x00004000
 #define ACCESS_MESSAGE	0x00008000
 #define ACCESS_CONNECT	0x00010000
+#define ACCESS_DEMAND	0x00020000
+#define ACCESS_NODEMAND	0x00040000
