@@ -1,5 +1,10 @@
 Major changes between version 0.16 and 0.98.
 --------------------------------------------
+  - Added a demand/nodemand option that controls whether outgoing
+    connections are done on demand or not. Manual connections
+    (using "up") work regardless or whether demand is enabled
+    or not. (A "block" will prevent *all* outgoing connections,
+    both demand and manual).
   - A down or block breaks out of a cycle of repeated connect
     script failures.
   - A down request now aborts an in progress dial/connect script.
